--- a/style.css
+++ b/style.css
@@ -4,12 +4,108 @@
 
 *{
     font-family: 'Work Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+.btn-primary{
+    padding: 15px;
+    width: 150px;
+    font-weight: 500;
+    color: white;
+    font-size:1rem;
+    border-radius: 8px;
+    background: #FF900E;
+    border: none;
 }
 
+
+header{
+    background: rgba(255, 144, 14, 0.10); 
+    padding: 20px 240px;
+}
+
+
 nav{
-    background: red;
     display: flex;
+    justify-content: space-between;
 }
 .head-title{
-    font-size: 5rem;
+    font-size: 2rem;
+}
+nav > ul{
+    display: flex;
+}
+nav li{
+    margin: 10px;
+    list-style: none;
+}
+nav li a{
+    color: #424242;
+    font-size: 1.2rem;
+    text-decoration: none;
+}
+
+.header-container{
+    width: 100%;
+    height: auto;
+    padding-top: 50px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+.header-content{
+    width: 800px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 20px;
+}
+.header-content h1{
+    font-size: 4rem;
+    padding: 0px 110px ;
+}
+.header-content p{
+    font-size: 1rem;
+    padding: 10px;
+}
+.header-container img{
+    width: 100%;
+}
+
+
+@media screen and (max-width:576px) {
+    header{
+        background: rgba(255, 144, 14, 0.10); 
+        padding: 20px 40px;
+    }
+    nav{
+        text-align: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .header-content{
+        width: 100%;
+    }
+    .header-content h1{
+        font-size: 2rem;
+        padding: 0px ;
+    }
+}
+
+@media screen and (min-width:576px) and (max-width:1220px) {
+    header{
+        background: rgba(255, 144, 14, 0.10); 
+        padding: 20px 40px;
+    }
+    nav{
+        text-align: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .header-content{
+        width: 100%;
+    }
+    .header-content h1{
+        font-size: 2rem;
+        padding: 0px ;
+    }
 }
