--- a/style.css
+++ b/style.css
@@ -54,14 +54,17 @@ nav li a{
     align-items: center;
 }
 .header-content{
-    width: 800px;
+    width: 880px;
+    height: auto;
     margin: 0 auto;
     text-align: center;
-    padding: 20px;
+    align-items: center;
+    justify-content: center;
+    padding:20px 0;
 }
 .header-content h1{
     font-size: 4rem;
-    padding: 0px 110px ;
+    padding: 10px;
 }
 .header-content p{
     font-size: 1rem;
@@ -82,8 +85,13 @@ nav li a{
         align-items: center;
         flex-direction: column;
     }
+    .header-container{
+        width: 100%;
+    }
     .header-content{
         width: 100%;
+        padding: 10px 0;
+        margin: 0 auto;
     }
     .header-content h1{
         font-size: 2rem;
@@ -91,7 +99,7 @@ nav li a{
     }
 }
 
-@media screen and (min-width:576px) and (max-width:1220px) {
+@media screen and (min-width:576px) and (max-width:1420px) {
     header{
         background: rgba(255, 144, 14, 0.10); 
         padding: 20px 40px;
@@ -103,6 +111,7 @@ nav li a{
     }
     .header-content{
         width: 100%;
+        padding: 10px 0;
     }
     .header-content h1{
         font-size: 2rem;
